--- a/_posts/2019-07-10-面试题整理 5 （华为） .md
+++ b/_posts/2019-07-10-面试题整理 5 （华为） .md
@@ -349,7 +349,7 @@ class ColorPoint extends Point {}//ColorPoint继承了Point类所有的属性和
 
 
 
-区别：
+**区别：**
 
 ES5 的继承，实质是**先创造子类的实例对象`this`**，然后再将父类的方法**添加到`this`上面**（`Parent.apply(this)`）。
 
@@ -504,31 +504,32 @@ Chrome中的开发者工具：断点设置、调试功能
 
    
 
-10. ### es6中const、let、var之间的区别？
 
-    1. var定义的变量，**作用域**是整个封闭函数，是全域的；
+### 10. es6中const、let、var之间的区别？
 
-       let定义的变量，作用域是在块级或者字块中；
+1. var定义的变量，**作用域**是整个封闭函数，是全域的；
 
-    2. **变量提升**：不论通过var声明的变量处于当前作用于的第几行，都会提升到作用域的最顶部。
+   let定义的变量，作用域是在块级或者字块中；
 
-       而let声明的变量不会在顶部初始化，凡是在let声明之前使用该变量都会报错（引用错误ReferenceError）；
+2. **变量提升**：不论通过var声明的变量处于当前作用于的第几行，都会提升到作用域的最顶部。
 
-    3. 只要块级作用域内存在`let`，它所声明的变量就会**绑定在这个区域**；
+   而let声明的变量不会在顶部初始化，凡是在let声明之前使用该变量都会报错（引用错误ReferenceError）；
 
-    4. **let不允许**在相同作用域内**重复声明**（报错同时使用var和let，两个let）
+3. 只要块级作用域内存在`let`，它所声明的变量就会**绑定在这个区域**；
 
-       
+4. **let不允许**在相同作用域内**重复声明**（报错同时使用var和let，两个let）
 
-    const用来专门声明一个常量，它跟let一样作用于块级作用域，没有变量提升，重复声明会报错，不同的是**const声明的常量不可改变，声明时必须初始化（赋值）**，const定义的对象可变。
+   
 
-    
+const用来专门声明一个常量，它跟let一样作用于块级作用域，没有变量提升，重复声明会报错，不同的是**const声明的常量不可改变，声明时必须初始化（赋值）**，const定义的对象可变。
 
-    const使用场景很广，包括常量、配置项以及引用的组件、定义的 “大部分” 中间变量等，都应该以cosnt做定义。反之就 let 而言，他的使用场景应该是**相对较少**的，我们只会在 loop(for，while 循环)及少量必须重定义的变量上用到他。
 
-    
 
-11. ### 闭包是什么？用let怎么实现闭包？
+const使用场景很广，包括常量、配置项以及引用的组件、定义的 “大部分” 中间变量等，都应该以cosnt做定义。反之就 let 而言，他的使用场景应该是**相对较少**的，我们只会在 loop(for，while 循环)及少量必须重定义的变量上用到他。
+
+
+
+### 11. 闭包是什么？用let怎么实现闭包？
 
 闭包是指有权访问另一个函数作用域中的变量的函数。
 
