--- a/_posts/2019-07-05-面试题整理 1（主要是css）.md
+++ b/_posts/2019-07-05-面试题整理 1（主要是css）.md
@@ -34,64 +34,64 @@ typora-root-url: ..
 
 详解：
 
-1. app适配怎么写？使用的单位是什么？（rem）
+### 1.app适配怎么写？使用的单位是什么？（rem）
 
-   解答：①**视口`viewPort`适配**，PC和手机屏幕不匹配的问题。
+解答：①**视口`viewPort`适配**，PC和手机屏幕不匹配的问题。
 
-   ```html
-   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scale=no,maximum-scale=1.0,minimum-scale=1.0">
-   ```
+```html
+<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scale=no,maximum-scale=1.0,minimum-scale=1.0">
+```
 
-   ②**图片不清晰问题**，使用大一倍的图片，通过`css`的`width`和`height`进行强制压缩到原来大小；
+②**图片不清晰问题**，使用大一倍的图片，通过`css`的`width`和`height`进行强制压缩到原来大小；
 
-   背景图使用`background-size：contain`单边填充或者`background-size：cover`按比例填充适配。
+背景图使用`background-size：contain`单边填充或者`background-size：cover`按比例填充适配。
 
-   ③**流体布局**（宽度百分比）
+③**流体布局**（宽度百分比）
 
-   ```css
-   .menu {
-       width:25%;
-       heigth:100px;/*高度给定*/
-       boxing-size：border-box;
-   }
-   ```
+```css
+.menu {
+    width:25%;
+    heigth:100px;/*高度给定*/
+    boxing-size：border-box;
+}
+```
 
-   ④**响应式布局**（根据屏幕大小动态调整页面布局）
+④**响应式布局**（根据屏幕大小动态调整页面布局）
 
-   ```css
-   .menu {
-       width:23%;
-       height:100px;
-       float:left;
-       margin:30px 1%;
-   }
-   @media (max-with:800px){
-       .menu {
-           width:46%;
-           margin:30px 2%;
-       }
-   }
-   @media (max-with:500px){
-       .menu {
-           width:90%;
-           margin:30px 5%;
-       }
-   }
-   ```
+```css
+.menu {
+    width:23%;
+    height:100px;
+    float:left;
+    margin:30px 1%;
+}
+@media (max-with:800px){
+    .menu {
+        width:46%;
+        margin:30px 2%;
+    }
+}
+@media (max-with:500px){
+    .menu {
+        width:90%;
+        margin:30px 5%;
+    }
+}
+```
 
-   
 
-2. 城市搜索和区块联动用的组件怎么实现的？
 
-   
+### 2.城市搜索和区块联动用的组件怎么实现的？
 
-3. 用Ajax的时候，get和post有什么区别？
 
-   
 
-4. vue中watch和computed有什么区别？分别在哪种场合下使用？监听的是data里面的值吗？
+### 3.用Ajax的时候，get和post有什么区别？
 
-   
+
+
+### 4.vue中watch和computed有什么区别？分别在哪种场合下使用？监听的是data里面的值吗？
+
+
 
 5.  用v-for渲染列表的时候，key值的作用是什么？
 
