--- a/_posts/2019-07-09-面试题整理 4 （较深）.md
+++ b/_posts/2019-07-09-面试题整理 4 （较深）.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      面试题整理4（较深）
+title:      面试题整理（较深）
 subtitle:  
 date:       2019-07-09
 author:     
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-# 面试题整理4（较深）
+# 面试题整理（较深）
 
 
 
