--- a/_posts/2019-07-05-面试题整理 1（主要是css）.md
+++ b/_posts/2019-07-05-面试题整理 1（主要是css）.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      面试题整理1（主要是css）
+title:      面试题整理（主要是css）
 subtitle:  
 date:       2019-07-05
 author:     
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-# 面试题整理1（主要是css）
+# 面试题整理（主要是css）
 
 
 
