--- a/_posts/2019-07-06-面试题整理 2（网易）.md
+++ b/_posts/2019-07-06-面试题整理 2（网易）.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      面试题整理2（网易）
+title:      面试题整理
 subtitle:  
 date:       2019-07-06
 author:     
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-# 面试题整理2（网易）
+# 面试题整理
 
 
 
