--- a/_posts/2019-07-10-面试题整理 6 （笔试） .md
+++ b/_posts/2019-07-10-面试题整理 6 （笔试） .md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      面试题整理6（笔试）
+title:      面试题整理（笔试）
 subtitle:  
 date:       2019-07-10
 author:     
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-# 面试题整理6（笔试）
+# 面试题整理（笔试）
 
 
 
