--- a/_posts/2019-07-11-面试题整理 7 （海康） .md
+++ b/_posts/2019-07-11-面试题整理 7 （海康） .md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      面试题整理7（海康）
+title:      面试题整理
 subtitle:  
 date:       2019-07-11
 author:     
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-# 面试题整理7（海康）
+# 面试题整理
 
 
 
