--- a/_posts/2019-07-06-面试题整理 2（网易）.md
+++ b/_posts/2019-07-06-面试题整理 2（网易）.md
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-# 面试题整理（vue）
+# 面试题整理（网易）
 
 
 
@@ -172,5 +172,7 @@ Vue.component('child',{
 不同类型的任务会进入对应的Event Queue，比如`setTimeout`和`setInterval`会进入相同的Event Queue。
 
 ![](/img/assets_2019/宏任务.png)
+
+
 
 进入整体代码(宏任务)后，开始第一次循环。接着执行所有的微任务。然后再次从宏任务开始，找到其中一个任务队列执行完毕，再执行所有的微任务。
