面试题整合
面试题整合

--- a/_posts/2019-07-05-面试题整理 1（主要是css）.md
+++ b/_posts/2019-07-05-面试题整理 1（主要是css）.md
@@ -93,41 +93,41 @@ typora-root-url: ..
 
 
 
-5.  用v-for渲染列表的时候，key值的作用是什么？
+### 5.用v-for渲染列表的时候，key值的作用是什么？
 
    
 
-6. 数据请求应该添加在生命周期的哪里？
+### 6.数据请求应该添加在生命周期的哪里？
 
-   
 
-7. 子盒子在父盒子中水平垂直居中有几种方法？（定位、弹性盒子）
 
-   
+### 7.子盒子在父盒子中水平垂直居中有几种方法？（定位、弹性盒子）
 
-8. 父盒子中子盒子左右两端对齐布局？（弹性盒子三行代码可解决）
 
-   
 
-9. 父盒子中子盒子浮动会出现什么问题？怎么清除浮动？父盒子下面的文字会怎么样？
+### 8.父盒子中子盒子左右两端对齐布局？（弹性盒子三行代码可解决）
 
-   
 
-10. 定位有哪几种属性？是否占位？相对定位是相对于什么进行定位的？（相对于本身）
 
-    
+### 9.父盒子中子盒子浮动会出现什么问题？怎么清除浮动？父盒子下面的文字会怎么样？
 
-11. 行内块元素和行内元素的区别？
 
-    
 
-12. 行内块元素一行显示的时候，两个盒子中间会存在间隙，是为什么？怎么解决？
+### 10.定位有哪几种属性？是否占位？相对定位是相对于什么进行定位的？（相对于本身）
 
-    
 
-13. 给DOM元素绑定事件有哪几种方法？
 
-    
+### 11.行内块元素和行内元素的区别？
 
-14. 数组常用的遍历方法有哪几种？（for...in一般用于对象）
+
+
+### 12.行内块元素一行显示的时候，两个盒子中间会存在间隙，是为什么？怎么解决？
+
+
+
+### 13.给DOM元素绑定事件有哪几种方法？
+
+
+
+### 14.数组常用的遍历方法有哪几种？（for...in一般用于对象）
 
