--- a/_posts/2019-07-16-数组去重（算法整理）.md
+++ b/_posts/2019-07-16-数组去重（算法整理）.md
@@ -19,20 +19,19 @@ typora-root-url: ..
 
 思路：新建一个结果数组、一个存储标志的对象，遍历数组，对象中`arr[i]`对应的值为`ture`的时候不重复添加
 
+**for...of循环的i代表的是value（多用于数组），for...in循环的是key（多用于对象）**；
+
 ```javascript
         function unique(arr) {
             var result = [],
                 hash = {}; //定义新数组result ,定义hash.
-            
-                //令elem等于传入的数组的某一项并遍历
-            for (var i = 0, elem;(elem = arr[i]) != null; i++) { 
+            for (let elem of arr) { 
 // 遍历前四个数时，hash表中没有这四个值，所以if语句成立，将数据push到result中，令这些表中的数都为true。
 // 当遍历到第二个1的时候，之前已经令hash[elem] = true , 所以if语句就不执行了，就不会重复了
                 if (!hash[elem]) {
                     result.push(elem);
                     hash[elem] = true;//作为一个是否在村数组中存在的标志
                 }
-                console.log(hash[elem])
             }
             return result;
         }
@@ -40,24 +39,42 @@ typora-root-url: ..
         unique(arr);//[1, 23, 34, 45, 6, 4]
 ```
 
-### 方法二：遍历数组，用indexOf
+### 方法二：遍历数组，用indexOf() / includes()
 
 思路：新建一个数组hash，遍历原数组，当`arr[i]`不存在于新数组中，就添加`push`进新数组，得到的新数组就是不重复的。
 
 ```javascript
 var arr=[2,8,5,0,5,2,6,7,2];
 function unique(arr){
-  var hash=[];
+  var result=[];
   for (var i = 0; i < arr.length; i++) {
-     if(hash.indexOf(arr[i])==-1){ //indexOf等于-1时代表数组中没有该值
-      hash.push(arr[i]);
+     if(result.indexOf(arr[i])==-1){ //indexOf等于-1时代表数组中没有该值
+      result.push(arr[i]);
      }
   }
-  return hash;
+  return result;
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 45, 6, 4]
 ```
+
+思路2：新建一个数组`result`，如果新数组中该值`i`不存在，则将原数组内容添加`push(i)`。
+
+**for...of循环的i代表的是value（多用于数组），for...in循环的是key（多用于对象）**；
+
+```javascript
+function unique(a) {
+    let result = []
+    for (let i of arr) { 
+        !result.includes(i) && result.push(i)
+    }
+    return result
+}
+var arr = [1, 23, 34, 45, 1, 6, 4, 23];
+unique(arr);//[1, 23, 34, 45, 6, 4]
+```
+
+
 
 ### 方法三：数组下标判断法
 
@@ -65,13 +82,13 @@ unique(arr);//[1, 23, 34, 45, 6, 4]
 
 ```javascript
 function unique(arr){
-  var hash=[];
+  var result=[];
   for (var i = 0; i < arr.length; i++) {
      if(arr.indexOf(arr[i])==i){//下标不同，代表了重复
-      	hash.push(arr[i]);
+      	result.push(arr[i]);
      }
   }
-  return hash;
+  return result;
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 45, 6, 4]
@@ -81,13 +98,13 @@ unique(arr);//[1, 23, 34, 45, 6, 4]
 
 ```javascript
 function unique(arr){
-  var hash=[];
+  var result=[];
   for (var i = 0; i < arr.length; i++) {
      if(arr.indexOf(arr[i])==arr.lastIndexOf(arr[i])){
-      hash.push(arr[i]);
+      	result.push(arr[i]);
      }
   }
-  return hash;
+  return result;
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[34, 45, 6, 4]
@@ -102,13 +119,14 @@ unique(arr);//[34, 45, 6, 4]
 ```javascript
 function unique(arr){
   arr.sort();
-  var hash=[arr[0]];
+  var result=[arr[0]];
   for (var i = 1; i < arr.length; i++) {
-     if(arr[i]!=hash[hash.length-1]){
-      hash.push(arr[i]);
+     if(arr[i]!=result[result.length-1]){
+      	result.push(arr[i]);
      }
+      //这里的if循环可以简写成 arr[i] !== arr[i-1] && result.push(arr[i])
   }
-  return hash;
+  return result;
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 4, 45, 6]
@@ -135,9 +153,29 @@ var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[34, 45, 1, 6, 4, 23]注意这里的顺序和上面的都不同
 ```
 
-思路2
+思路2：两层循环遍历，如果有重复的值，则用splice（）删除
 
-### 方法六：ES6的Set结构
+```javascript
+function unique(a) {
+    for (let i=0, len=arr.length; i<len; i++) {
+        for (let j=i+1; j<len; j++) {
+            if (arr[i] == arr[j]) {
+                arr.splice(j, 1);
+                // splice 会改变原数组长度，所以要将数组长度 len 和下标 j 减一
+                len--;
+                j--;
+            }
+        }
+    }
+    return arr
+}
+var arr = [1, 23, 34, 45, 1, 6, 4, 23];
+unique(arr);//[1, 23, 34, 45, 6, 4]
+```
+
+
+
+### 方法六：ES6的Set结构（高性能）
 
 思路：Set结构成员的值都是唯一的，Set函数可以接受一个数组作为参数，用来初始化。
 
@@ -145,6 +183,7 @@ unique(arr);//[34, 45, 1, 6, 4, 23]注意这里的顺序和上面的都不同
 function unique(arr){
   	var x = new Set(arr);
  	return [...x];//这里直接返回x的话，结果是Set(6){1, 23, 34, 45, 6, 4}
+    //上面的两行代码可以简写成：return Array.from(new Set([...arr]))
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 45, 6, 4]
@@ -167,4 +206,6 @@ function unique(a) {
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 45, 6, 4]
 ```
+
+
 
