--- a/_posts/2019-07-05-面试题整理 1（主要是css）.md
+++ b/_posts/2019-07-05-面试题整理 1（主要是css）.md
@@ -87,9 +87,28 @@ typora-root-url: ..
 
 ### 3.用Ajax的时候，get和post有什么区别？
 
+​			GET和POST都是HTTP协议中的两种发送请求的办法，都是基于TCP/IP。
+
+| GET                                    | POST                               |
+| -------------------------------------- | ---------------------------------- |
+| 向服务器获取指定资源                   | 向服务器提交数据，数据放在请求体里 |
+| 把参数包含在`URL`中                    | 通过`request body`传递参数         |
+| 有长度限制，2kB                        | 没有限制                           |
+| 只能进行`URL`编码                      | 支持多种编码方式                   |
+| 在浏览器回退时是无害的                 | 在浏览器回退时，POST会再次提交请求 |
+| GET请求会被浏览器主动cache             | POST不会缓存，除非手动设置         |
+| 请求参数会被完整保留在浏览器历史记录里 | 参数不会被保留                     |
+
 
 
 ### 4.vue中watch和computed有什么区别？分别在哪种场合下使用？监听的是data里面的值吗？
+
+| computed 计算属性                                            | watch 观察的动作                                            | methods                          |
+| ------------------------------------------------------------ | ----------------------------------------------------------- | -------------------------------- |
+| 数据会被缓存，只要依赖不发生改变，即使页面重新渲染，该方法就不会调用 | 直接监测一个值的变化，监测值不发生变化，该方法就不会调用    | 每次页面发生渲染，都会被重新调用 |
+|                                                              | 监听复杂数据类型需用深度监听（在被监听对象中使用`handler`） |                                  |
+|                                                              |                                                             |                                  |
+|                                                              |                                                             |                                  |
 
 
 
