新增面试题
新增面试题

--- a/_posts/2019-07-09-面试题整理 4 （较深）.md
+++ b/_posts/2019-07-09-面试题整理 4 （较深）.md
@@ -294,3 +294,104 @@ console.log(origin);
 事件冒泡的概念下在p元素上发生click事件的顺序应该是**p -> div -> body -> html -> document**；
 
 事件捕获的概念下在p元素上发生click事件的顺序应该是**document -> html -> body -> div -> p**；
+
+
+
+
+
+### 面试题整理（吉利）
+
+1. html5的标签有哪些？
+2. css中的定位有哪些？想要子盒子在父盒子中居右侧怎么做？
+3. ES6有哪些新特性？let、var、const 有什么区别？
+4. 什么是闭包？
+5. vue有哪些生命周期？
+6. vue中this在哪里开始可调用？
+7. 有什么js的基本数据类型？
+8. 怎么判断数组类型？
+9. 怎么给数组去重？
+
+
+
+### 面试题整理（笔试后复试）
+
+1. 学过哪些基础框架？
+2. vue源码了解过吗？怎么实现数据的劫持？
+3. vue的生命周期
+4. 分别在什么时候使用created、mounted？
+5. 用过的ES6、ES7常用列举？
+6. Promise、async await 的使用？
+7. 箭头函数和一般函数有什么区别？
+8. 后端了解过什么语言？
+9. jQuery中绑定时间用的on和bind有什么区别？
+10. 前端常用的性能优化有哪些？加快页面打开的速度怎么处理？
+11. 闭包是什么？举例说明
+
+
+
+### B站站友分享题目
+
+1. vue组件中data为什么是函数？
+2. vue-cli如何使用json数据模拟？
+
+
+
+### 面试题分享（海康 电话面试）
+
+1. js有哪些基本数据类型
+2. 深拷贝和浅拷贝的区别？怎么实现深拷贝
+3. es6中 let var const
+4. 数组的常用操作方法？其中splice 和slice有什么区别？
+5. js中怎么绑定事件？
+6. 事件委托是什么？
+7. 简要说明get 和 post的区别
+8. 简要说明v-if和v-show的区别
+9. 父子组件、兄弟组件分别怎么传值的？
+
+### 面试题分享（海康 现场面试 第二场）
+
+
+
+### 面试题分享（宇视笔试题）
+
+1. 在js的浏览器对象模型中，window对象的（）属性是用来指定浏览器状态栏里面的临时消息
+
+2. 两个div采用绝对定位，要设置层级关系，需要设置哪个属性
+
+3. eval()函数可以解释由js源代码组成的字符串吗？该函数能用调试工具进行断点调试吗？该函数是js自带的函数，会不会引起安全性问题？该函数动态解释字符串，会存在效率问题吗？
+
+4. 一般html网页元素加载完成后，会触发哪个事件？onready onchange onload onblur
+
+5. addEventListener可以多次给DOM对象增加监听事件吗？
+
+6. attachEvent可以删除DOM对象的监听事件吗
+
+7. 通过new Date（）可以获取当前PC本地时间吗？
+
+8. form标签对之间，可以出现p、ul等非表单域元素吗
+
+9. 在js中，两个证书进行除（/）运算，结果也为整数吗？
+
+10. 属性document.body.scrolWidth表示网页中滚动条的宽度吗？
+
+11. HTTP常见的状态码
+
+12. js或DOM操作方便，浏览器兼容的注意项有哪些
+
+13. Web前端开发常见的安全漏洞
+
+14. 冒泡排序
+
+15. 深拷贝代码
+
+    
+
+### 面试题分享（宇视 电话面试）
+
+1. vue生命周期有哪些
+2. v-if和v-show有什么区别
+3. vuex了解吗
+4. 单页面应用的优缺点
+5. 轮播图的实现及后台数据抓取
+6. 跨域
+7. 安全性，在无法使用HTTPS的情况下，局域网如何实现防止报文攻击
