--- a/_posts/2019-07-16-数组去重（算法整理）.md
+++ b/_posts/2019-07-16-数组去重（算法整理）.md
@@ -30,7 +30,7 @@ typora-root-url: ..
 // 当遍历到第二个1的时候，之前已经令hash[elem] = true , 所以if语句就不执行了，就不会重复了
                 if (!hash[elem]) {
                     result.push(elem);
-                    hash[elem] = true;//作为一个是否在村数组中存在的标志
+                    hash[elem] = true;//作为一个是否在数组中存在的标志
                 }
             }
             return result;
@@ -41,10 +41,10 @@ typora-root-url: ..
 
 ### 方法二：遍历数组，用indexOf() / includes()
 
-思路：新建一个数组hash，遍历原数组，当`arr[i]`不存在于新数组中，就添加`push`进新数组，得到的新数组就是不重复的。
+思路1：新建一个数组result，遍历原数组，当`arr[i]`不存在于新数组中，就添加`push`进新数组，得到的新数组就是不重复的。
 
 ```javascript
-var arr=[2,8,5,0,5,2,6,7,2];
+
 function unique(arr){
   var result=[];
   for (var i = 0; i < arr.length; i++) {
@@ -63,12 +63,12 @@ unique(arr);//[1, 23, 34, 45, 6, 4]
 **for...of循环的i代表的是value（多用于数组），for...in循环的是key（多用于对象）**；
 
 ```javascript
-function unique(a) {
-    let result = []
+function unique(arr) {
+    let result = [];
     for (let i of arr) { 
-        !result.includes(i) && result.push(i)
+        !result.includes(i) && result.push(i);
     }
-    return result
+    return result;
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 45, 6, 4]
@@ -138,16 +138,16 @@ unique(arr);//[1, 23, 34, 4, 45, 6]
 
 ```javascript
 function unique(arr){
-  var hash=[];
+  var result=[];
   for (var i = 0; i < arr.length; i++) {
     for (var j = i+1; j < arr.length; j++) {
       if(arr[i]===arr[j]){
         ++i;
       }
     }
-      hash.push(arr[i]);
+      result.push(arr[i]);
   }
-  return hash;
+  return result;
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[34, 45, 1, 6, 4, 23]注意这里的顺序和上面的都不同
@@ -156,7 +156,7 @@ unique(arr);//[34, 45, 1, 6, 4, 23]注意这里的顺序和上面的都不同
 思路2：两层循环遍历，如果有重复的值，则用splice（）删除
 
 ```javascript
-function unique(a) {
+function unique(arr) {
     for (let i=0, len=arr.length; i<len; i++) {
         for (let j=i+1; j<len; j++) {
             if (arr[i] == arr[j]) {
@@ -198,7 +198,7 @@ unique(arr);//[1, 23, 34, 45, 6, 4]
 filter() 方法通过检查指定数组中符合条件的所有元素；不会改变原始数组，创建一个新的数组。
 
 ```javascript
-function unique(a) {
+function unique(arr) {
     return arr.filter((item, index)=> {
         return arr.indexOf(item) === index
     })
