--- a/_posts/2019-07-17-剑指offer：二维数组中的查找.md
+++ b/_posts/2019-07-17-剑指offer：二维数组中的查找.md
@@ -18,6 +18,7 @@ typora-root-url: ..
 ### 方法一：暴力遍历
 
 ```javascript
+/*全部遍历一遍*/
 function Find(target, array)
 {
     for(let i = 0;i<array.length;i++){
@@ -31,4 +32,49 @@ function Find(target, array)
 ```
 
 ### 方法二：以左下角为起点
+
+```javascript
+/* 以左下角为起点，target大于左下角的值，去掉第一列，即j+1，*/
+			function Find(target, array) {
+            var cols = array[0].length;
+            var rows = array.length;
+            for (var i = cols, j = 0; i >= 0 && j < rows;) {
+                if (target > array[rows - 1][j]) {
+                    cols--;
+                    j++;
+                    continue
+                } else if (target < array[rows - 1][j]) {
+                    rows--;
+                    i--;
+                    continue
+                } else if (target == array[rows - 1][j]) {
+                    return true
+                }
+            }
+            return false
+        }
+```
+
+### 方法三：（三种之中的最优解）
+
+```javascript
+
+function Find(target, array)
+{
+    var cols=array[0].length;
+    var rows=array.length;
+    for(var i=rows-1,j=0;i>=0 && j<cols;){
+            if(target > array[i][j]){
+                j++;
+                continue
+            }else if(target < array[i][j]){
+                i--;
+                continue
+            }else if(target == array[i][j]){
+                return true
+            }
+    } 
+    return false
+}
+```
 
