微信小程序
微信小程序

--- a/_posts/2019-07-31-微信小程序的学习.md
+++ b/_posts/2019-07-31-微信小程序的学习.md
@@ -81,3 +81,42 @@ https://developers.weixin.qq.com/miniprogram/dev/reference/configuration/app.htm
 效果图如下：
 
 ![1564668432738](/img/assets_2019/1564668432738.png)
+
+在微信小程序里面，用的标签不再是div span等了，最常用的，类似div功能的是
+
+```xml
+<view>类似div</view>
+```
+
+所有的变量引用都是用两对花括号包裹，其中需要注意的是布尔类型的值是引号+花括号的配置
+
+```xml
+"{{true}}"  "{{false}}" <!-- 不这么写就会报错，缺一不可,中间也不可以有空格，有空格就会解析成字符串-->
+```
+
+在微信小程序中，列表渲染和条件渲染都用wx开头，可以和vue一起联想记忆
+
+```xml
+wx:for  下标变量名默认为 index，当前项的变量名默认为 item  要使用wx:key
+
+wx:for-item 可以指定数组当前元素的变量名  wx:for-index 可以指定数组当前下标的变量名
+<view wx:for="{{array}}" wx:for-index="idx" wx:for-item="itemName" wx:key="idx">
+  {{idx}}: {{itemName.message}}
+</view>
+```
+
+一个使用  wx：for  和  wx：if   的九九乘法表（官方文档拷贝下来的）
+
+```xml
+<view wx:for="{{[1, 2, 3, 4, 5, 6, 7, 8, 9]}}" wx:for-item="i">
+  <view wx:for="{{[1, 2, 3, 4, 5, 6, 7, 8, 9]}}" wx:for-item="j">
+    <view wx:if="{{i <= j}}">
+      {{i}} * {{j}} = {{i * j}}
+    </view>
+  </view>
+</view>
+```
+
+多个标签可以用 block wx:for="{{array}}"
+
+条件渲染 wx:if    wx:elif     wx:else   
