--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-# 面试题整理
+# 试题整理
 
 刷题错题整理：
 
@@ -95,7 +95,7 @@ typora-root-url: ..
 
 
 
-# 面试题整理（笔试）
+# 面试题整理
 
 1. **跨域**怎么实现？**jsonp**的原理是什么？
 
@@ -169,6 +169,8 @@ typora-root-url: ..
 37. js的**执行机制**？
 
     
+
+### 笔试题
 
 详解：
 
@@ -622,7 +624,7 @@ text-overflow:ellipsis;
 
 
 
-# 面试题整理（华为）
+# 华为面试题
 
 详解：
 
@@ -1054,7 +1056,7 @@ let声明的变量可以绑定在作用域中。
 
 
 
-# 面试题整理（海康）
+# 海康面试题
 
 详解：
 
@@ -1311,7 +1313,7 @@ methods:{
 
 
 
-# 面试题整理（网易）
+# 网易面试题
 
 
 
@@ -1434,7 +1436,7 @@ Vue.component('child',{
 
 ### 37.js的执行机制：Event loop
 
-![](/../../../../%E6%88%91%E7%9A%84%E6%96%87%E6%A1%A3/Documents/GitHub/CodingWithAlice.github.io/img/assets_2019/%E6%89%A7%E8%A1%8C%E6%9C%BA%E5%88%B6.png)
+![](/img/assets_2019/执行机制.png)
 
 - 同步和异步任务**分别进入不同的执行"场所"**，同步的进入主线程，异步的进入Event Table并注册函数。
 - 当指定的事情完成时，Event Table会将这个函数移入Event Queue。
@@ -1454,9 +1456,549 @@ Vue.component('child',{
 
 不同类型的任务会进入对应的Event Queue，比如`setTimeout`和`setInterval`会进入相同的Event Queue。
 
-![](/../../../../%E6%88%91%E7%9A%84%E6%96%87%E6%A1%A3/Documents/GitHub/CodingWithAlice.github.io/img/assets_2019/%E5%AE%8F%E4%BB%BB%E5%8A%A1.png)
-
-
+![](/img/assets_2019/宏任务.png)
 
 进入整体代码(宏任务)后，开始第一次循环。接着执行所有的微任务。然后再次从宏任务开始，找到其中一个任务队列执行完毕，再执行所有的微任务。
 
+
+
+# 面试题整理（主要是css）
+
+
+
+1. app适配怎么写？使用的单位是什么？（rem）
+2. 城市搜索和区块联动用的组件怎么实现的？
+3. 用Ajax的时候，get和post有什么区别？
+4. vue中watch和computed有什么区别？分别在哪种场合下使用？监听的是data里面的值吗？
+5. 用v-for渲染列表的时候，key值的作用是什么？
+6. 数据请求应该添加在生命周期的哪里？
+7. 子盒子在父盒子中水平垂直居中有几种方法？（定位、弹性盒子）
+8. 父盒子中子盒子左右两端对齐布局？（弹性盒子三行代码可解决）
+9. 父盒子中子盒子浮动会出现什么问题？怎么清除浮动？父盒子下面的文字会怎么样？
+10. 定位有哪几种属性？是否占位？相对定位是相对于什么进行定位的？（相对于本身）
+11. 行内块元素和行内元素的区别？
+12. 行内块元素一行显示的时候，两个盒子中间会存在间隙，是为什么？怎么解决？
+13. 给DOM元素绑定事件有哪几种方法？
+14. 数组常用的遍历方法有哪几种？（for...in一般用于对象）
+
+
+
+详解：
+
+### 1.app适配怎么写？使用的单位是什么？（rem）
+
+解答：①**视口`viewPort`适配**，PC和手机屏幕不匹配的问题。
+
+```html
+<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scale=no,maximum-scale=1.0,minimum-scale=1.0">
+```
+
+②**图片不清晰问题**，使用大一倍的图片，通过`css`的`width`和`height`进行强制压缩到原来大小；
+
+背景图使用`background-size：contain`单边填充或者`background-size：cover`按比例填充适配。
+
+③**流体布局**（宽度百分比）
+
+```css
+.menu {
+    width:25%;
+    heigth:100px;/*高度给定*/
+    boxing-size：border-box;
+}
+```
+
+④**响应式布局**（根据屏幕大小动态调整页面布局）
+
+```css
+.menu {
+    width:23%;
+    height:100px;
+    float:left;
+    margin:30px 1%;
+}
+@media (max-with:800px){
+    .menu {
+        width:46%;
+        margin:30px 2%;
+    }
+}
+@media (max-with:500px){
+    .menu {
+        width:90%;
+        margin:30px 5%;
+    }
+}
+```
+
+
+
+### 2.城市搜索和区块联动用的组件怎么实现的？
+
+
+
+### 3.用Ajax的时候，get和post有什么区别？
+
+​			GET和POST都是HTTP协议中的两种发送请求的办法，都是基于TCP/IP。
+
+| GET                                    | POST                               |
+| -------------------------------------- | ---------------------------------- |
+| 向服务器获取指定资源                   | 向服务器提交数据，数据放在请求体里 |
+| 把参数包含在`URL`中                    | 通过`request body`传递参数         |
+| 有长度限制，2kB                        | 没有限制                           |
+| 只能进行`URL`编码                      | 支持多种编码方式                   |
+| 在浏览器回退时是无害的                 | 在浏览器回退时，POST会再次提交请求 |
+| GET请求会被浏览器主动cache             | POST不会缓存，除非手动设置         |
+| 请求参数会被完整保留在浏览器历史记录里 | 参数不会被保留                     |
+
+
+
+### 4.vue中watch和computed有什么区别？分别在哪种场合下使用？监听的是data里面的值吗？
+
+| computed 计算属性                                            | watch 观察的动作                                            | methods                          |
+| ------------------------------------------------------------ | ----------------------------------------------------------- | -------------------------------- |
+| 数据会被缓存，只要依赖不发生改变，即使页面重新渲染，该方法就不会调用 | 直接监测一个值的变化，监测值不发生变化，该方法就不会调用    | 每次页面发生渲染，都会被重新调用 |
+|                                                              | 监听复杂数据类型需用深度监听（在被监听对象中使用`handler`） |                                  |
+|                                                              |                                                             |                                  |
+|                                                              |                                                             |                                  |
+
+
+
+### 5.用v-for渲染列表的时候，key值的作用是什么？
+
+   
+
+### 6.数据请求应该添加在生命周期的哪里？
+
+
+
+### 7.子盒子在父盒子中水平垂直居中有几种方法？（定位、弹性盒子）
+
+
+
+### 8.父盒子中子盒子左右两端对齐布局？（弹性盒子三行代码可解决）
+
+
+
+### 9.父盒子中子盒子浮动会出现什么问题？怎么清除浮动？父盒子下面的文字会怎么样？
+
+
+
+### 10.定位有哪几种属性？是否占位？相对定位是相对于什么进行定位的？（相对于本身）
+
+
+
+### 11.行内块元素和行内元素的区别？
+
+
+
+### 12.行内块元素一行显示的时候，两个盒子中间会存在间隙，是为什么？怎么解决？
+
+
+
+### 13.给DOM元素绑定事件有哪几种方法？
+
+
+
+### 14.数组常用的遍历方法有哪几种？（for...in一般用于对象）
+
+
+
+# 面试题整理（较深）
+
+
+
+1. 大致讲一下ES6新特性；
+2. Canvas绘图；
+3. Node.js；
+4. Webpack；
+5. html中首行<!doctype>的作用？
+6. css中的动画特性可以用js实现，那为什么还要用css来实现？
+7. Ajax遇到拦截器，请求数据要重新处理怎么做？
+8. bootstrap中的栏栅一行有24个，是怎么做到的？
+9. 轮播图实现的时候是怎么考虑的？
+10. git的使用，常用操作代码有哪些？
+11. 简单说一下get和post区别？
+12. h5的新特性、css3的新特性简单说一下？
+13. SEO搜索引擎优化？
+14. const定义的对象能够被改变？为什么？
+15. let和var在全局定义的时候有什么区别？
+16. 三大事件冒泡、捕获是怎么执行的？
+
+
+
+详解：
+
+### 1. 大致讲一下ES6新特性；
+
+① **箭头函数**；
+
+② 增加了对类的**支持class关键字**；继承：`class Programmer extends Animal`
+
+③ 增强了**对象字面量**：可以在对象字面量里面**定义原型**
+
+` __proto__: human, //设置此对象的原型为human,相当于继承human ` ；
+
+定义方法**可以不用function关键字**
+
+` work() {console.log('working...'); } `；
+
+④ **字符串模板**：反引号 ` 来创建字符串；
+
+⑤ **解构**：[name,age]=[Alice,'male','secrect'];//数组解构；
+
+⑥ 参数默认值，不定参数，拓展参数：
+
+​	**参数默认值**：在定义函数的时候指定参数的默认值
+
+```javascript
+function sayHello2(name='dude'){
+	console.log(`Hello ${name}`);
+}
+```
+
+​	**不定参数**：在函数中使用命名参数同时接收不定数量的未命名参数，**三个句点后跟代表所有不定参数的变量名**。
+
+```javascript
+function add(...x){
+	return x.reduce((m,n)=>m+n);
+}
+```
+
+​	**拓展参数**：允许传递数组或者类数组直接做为函数的参数而不用通过apply。
+
+```javascript
+var people=['Wayou','John','Sherlock'];
+sayHello(...people);//输出：Hello Wayou,John,Sherlock
+```
+
+⑦ `let` 与`const`关键字
+
+⑧ `for of `值遍历：for in 循环用于遍历数组，类数组或对象，for of循环功能相似，不同的是每次循环它**提供的不是序号而是值**。
+
+⑨ iterator, generator：iterator拥有一个next方法；generator是一种特殊的iterator，通过function*来声明的，**yield 关键字**可以暂停函数的执行，随后可以再进进入函数继续执行。
+
+⑩ **模块module**
+
+```javascript
+// point.js
+module "point" {
+    export class Point {
+        constructor (x, y) {
+            public x = x;
+            public y = y;
+        } 
+    }
+}
+
+// myapp.js
+module point from "/point.js";	//声明引用的模块
+import Point from "point";		//可以看出，尽管声明了引用的模块，还是可以通过指定需要的部分进行导入
+var origin = new Point(0, 0);
+console.log(origin);
+```
+
+① **Map，Set 和 WeakMap，WeakSet**：提供了更加方便的获取属性值的方法，不用像以前一样用hasOwnProperty来检查某个属性是属于原型链上还是当前对象的。同时，在进行属性值添加与获取时有专门的get，set 方法。WeakMap,WeakSet更加安全，作为属性键的对象如果没有别的变量在引用它们，则会被回收释放掉。
+
+② Proxies：**监听对象**身上发生了什么事情，并在这些事情发生后执行一些相应的操作。
+
+③ Symbols：是一种基本类型，不是一个对象。可以用symbol这种值来做为对象的键。
+
+④ Math，Number，String，Object 的新API；
+
+⑤ Promises：**处理异步操作的一种模式**，then()
+
+### 2. Canvas绘图；
+
+### 3.Node.js；
+
+### 4.Webpack；
+
+### 5.html中首行<!doctype>的作用？
+
+​	**文档类型声明**，目的是告诉标准通用标记语言解析器要使用什么样的文档类型定义（DTD）来解析文档；声明必须是HTML文档的第一行，位于html标签之前；
+
+### 6.css中的动画特性可以用js实现，那为什么还要用css来实现？
+
+​	当您为 UI 元素采用较小的独立状态时，使用 CSS。 CSS 变换和动画非常适合于从侧面引入导航菜单，或显示工具提示。最后，可以使用 JavaScript 来控制状态，但动画本身是采用 CSS。**用CSS制作动画是让元素在屏幕上移动的最简单方法**。
+
+​	**在需要对动画进行大量控制时，使用 JavaScript**。 Web Animations API 是一个基于标准的方法，现已在 Chrome 和 Opera 中提供。该方法可提供实际对象，非常适合复杂的对象导向型应用。在需要停止、暂停、减速或倒退时，JavaScript 也非常有用。
+
+**那么如何从两者中抉择？**
+
+​	根据 Google Developer，**渲染线程分为 主线程 (main thread) 和 合成线程 (compositor thread)**。如果 CSS 动画**只是改变` transforms` 和` opacity`，这时整个 CSS 动画得以在 合成线程 完成（而JS动画则会在 主线程 执行**，然后触发合成线程进行下一步操作），在 JS 执行一些昂贵的任务时，主线程繁忙，CSS 动画由于使用了合成线程可以保持流畅。
+
+​	在许多情况下，也可以由合成线程来处理 transforms 和 opacity 属性值的更改。
+
+​	对于帧速表现不好的低版本浏览器，**CSS3可以做到自然降级，而JS则需要撰写额外代码**。
+
+​	CSS动画**有天然事件支持**（TransitionEnd、AnimationEnd，但是它们都需要针对浏览器加前缀），**JS则需要自己写事件**。
+
+​	如果有任何**动画触发绘画，布局或两者，则需要 “主线程” 才能完成工作。** 这对于基于 CSS 和 JavaScript 的动画都是如此，布局或绘制的开销可能会使与 CSS 或 JavaScript 执行相关的任何工作相形见绌，这使得问题没有实际意义。
+
+​	**CSS3有兼容性问题，而JS大多时候没有兼容性问题。**
+
+### 7.Ajax遇到拦截器，请求数据要重新处理怎么做？
+
+
+
+### 8.bootstrap中的栏栅一行有12个，是怎么做到的？
+
+​	总共有**五个栅格等级**，每个响应式分界点隔出一个等级：特小`.col-`、小`.col-sm-`、中 `.col-md-`、大`.col-lg-`、特大`.col-xl-`。
+
+​	使用的row行必须包裹在`container`和`container-fluid`下，外部容器一个是`container`，一个是`container-fluid`，第一个**`container`是固定宽度，居中在网页中间**，第二个**`container-fluid`是百分比宽度，宽度为100%**，根据情况我们可以选择不同的容器。
+
+![](/img/assets_2019/container.png)
+
+**工作原理**：
+
+​	栅格系统提供了**内容居中**、**水平填充**网页内容的方法，`.container`实现固定的宽度并居中呈现，`.container-fluid`实现全宽度，并和其它网格实现对齐。
+
+​	行(.row)是列(.col-*)的横向组合和父容器，**每列都有水平的padding值**，用于控制列与列之间的间隔，同时在负边距的行上抵消，从而实现列中的所有内容在视觉上是左侧对齐的体验。
+
+​	.row上带有`margin-left: -15px;margin-right: -15px;`属性，你可以在.row上上定义`.no-gutters`属性，从而消除这个属性，使页面不会**额外宽出30px**，即`<div class="row no-gutters"...`。
+
+​	`.col-*`的`width`属性(即列宽)是**用百分比来表现**和定义的，所以它们总是流式的，其尺寸大小受父元素的定义影响。
+
+|                                    | 超小屏幕（新增规格）<576px | 小屏幕  次小屏≥576px | 中等屏幕  窄屏≥768px | 大屏幕  桌面显示器≥992px | 超大桌面  大桌面显示器≥1200px |
+| ---------------------------------- | -------------------------- | -------------------- | -------------------- | ------------------------ | ----------------------------- |
+| container最大宽度                  | None（auto）               | 540px                | 720px                | 960px                    | 1140px                        |
+| 类前缀                             | \.col\-                    | \.col\-sm\-          | \.col\-md\-          | \.col\-lg\-              | \.col\-xl\-                   |
+| 列数                               | 12列                       | 12列                 | 12列                 | 12列                     | 12列                          |
+| Gutter width（都是每列两侧各15px） | 30px                       | 30px                 | 30px                 | 30px                     | 30px                          |
+| 列间隙（都是每列两侧各15px）       | 30px                       | 30px                 | 30px                 | 30px                     | 30px                          |
+| 都可嵌套、可排序                   |                            |                      |                      |                          |                               |
+
+
+
+### 9.轮播图实现的时候是怎么考虑的？
+
+四种方式实现：
+
+​	swiper插件实现轮播图；
+
+​	JS实现轮播图；
+
+​	jQuery实现轮播图；
+
+​	css3实现轮播图；
+
+```javascript
+		// 1. 克隆元素
+        ul.appendChild(ul.children[0].cloneNode(true));
+        // 2.创建ol 和li
+        var ol = document.createElement("ol");//创建ol元素
+        scroll.appendChild(ol);// 把ol放到scroll盒子里面去
+        for (var i=0;i<ulList.length-1;i++) {
+            var li = document.createElement("li");// 创建li元素
+            li.innerHTML = i + 1;// 给li里面添加文字  1 2 3 4 5
+            ol.appendChild(li);// 将li元素添加到ol里面
+        }
+        ol.children[0].className = "current";
+// ol中的第一个li背景色为purple现无缝滚动就需要多一张图片才行，即克隆第一张图片，放到最后面
+```
+
+```javascript
+//动画函数：
+		// 动画函数的第一个参数，代表动画对象；第二个参数代表动量
+        // 让图片做匀速运动，匀速动画的原理是:当前的位置 + 速度,即 offsetLeft + speed
+        function animate(obj,target){
+            // 首先清除掉定时器
+            clearInterval(obj.timer);
+            // 用来判断 是+ 还是 -  即说明向左走还是向右走
+            var speed = obj.offsetLeft < target ? 15 : -15;
+            obj.timer = setInterval(function(){
+                var result = target - obj.offsetLeft;//它们的差值不会超过speed
+                obj.style.left = obj.offsetLeft + speed + "px";
+                // 有可能有小数的存在，所以在这里要做个判断             
+                if (Math.abs(result) <= Math.abs(speed)) {
+                    clearInterval(obj.timer);
+                    obj.style.left = target + "px";
+                }
+            },10);
+        }
+```
+
+```javascript
+//定时器函数：
+		var timer = null; 	// 轮播图的定时器
+        var key = 0;		// 控制播放的张数
+        var circle = 0;		// 控制小圆点
+
+        timer = setInterval(autoplay,1000);// 自动轮播
+        function autoplay(){
+/*自动轮播时,要对播放的张数key进行一个判断,如果播放的张数超过ulLis.length-1,就要重头开始播放.  
+		因为我们克隆了第一张并将其放在最后面,所以我们要从第二张图片开始播放*/
+            key++; 						// 先++
+            if(key > ulLis.length-1){	// 后判断
+                ul.style.left = 0; 		// 迅速调回
+                key = 1; 				// 因为第6张是第一张，所以播放的时候是从第2张开始播放
+            }
+// 动画部分
+            animate(ul,-key*liWidth);
+
+// 小圆点circle，当显示第几张图片是，对应的小圆点的颜色也发生变化 
+            /*同理,对小圆点也要有一个判断*/
+            circle++;
+            if (circle > olLis.length-1) {
+                circle = 0;
+            }
+            // 小圆点颜色发生变化
+            for (var i = 0 ; i < olLis.length;i++) {
+                // 先清除掉所用的小圆点类名
+                olLis[i].className = ""; 
+            }
+            // 给当前的小圆点 添加一个类名
+            olLis[circle].className = "current";
+
+        }
+```
+
+
+
+### 10.git的使用，常用操作代码有哪些？
+
+
+
+### 11.简单说一下get和post区别？
+
+
+
+### 12.h5的新特性、css3的新特性简单说一下？
+
+
+
+### 13.SEO搜索引擎优化？
+
+
+
+### 14.const定义的对象能够被改变？为什么？
+
+
+
+### 15.let和var在全局定义的时候有什么区别？
+
+
+
+### 16.三大事件冒泡、捕获是怎么执行的？
+
+**先捕获再冒泡**
+
+事件冒泡的概念下在p元素上发生click事件的顺序应该是**p -> div -> body -> html -> document**；
+
+事件捕获的概念下在p元素上发生click事件的顺序应该是**document -> html -> body -> div -> p**；
+
+
+
+
+
+### 吉利面试题
+
+1. html5的标签有哪些？
+2. css中的定位有哪些？想要子盒子在父盒子中居右侧怎么做？
+3. ES6有哪些新特性？let、var、const 有什么区别？
+4. 什么是闭包？
+5. vue有哪些生命周期？
+6. vue中this在哪里开始可调用？
+7. 有什么js的基本数据类型？
+8. 怎么判断数组类型？
+9. 怎么给数组去重？
+
+
+
+### 笔试后的面试
+
+1. 学过哪些基础框架？
+2. vue源码了解过吗？怎么实现数据的劫持？
+3. vue的生命周期
+4. 分别在什么时候使用created、mounted？
+5. 用过的ES6、ES7常用列举？
+6. Promise、async await 的使用？
+7. 箭头函数和一般函数有什么区别？
+8. 后端了解过什么语言？
+9. jQuery中绑定时间用的on和bind有什么区别？
+10. 前端常用的性能优化有哪些？加快页面打开的速度怎么处理？
+11. 闭包是什么？举例说明
+
+
+
+### B站站友分享题目
+
+1. vue组件中data为什么是函数？
+2. vue-cli如何使用json数据模拟？
+
+
+
+### 海康电话面试
+
+1. js有哪些基本数据类型
+2. 深拷贝和浅拷贝的区别？怎么实现深拷贝
+3. es6中 let var const
+4. 数组的常用操作方法？其中splice 和slice有什么区别？
+5. js中怎么绑定事件？
+6. 事件委托是什么？
+7. 简要说明get 和 post的区别
+8. 简要说明v-if和v-show的区别
+9. 父子组件、兄弟组件分别怎么传值的？
+
+### 海康电话面试后的现场面试
+
+1. HTTP请求中，头部有一个请求，请求头：content-type，发送请求的数据类型
+2. ES6中的Promise方法，有两个参数，分别代表什么（记不清了，引到for in）
+3. for...in和for ...of 的区别：for...of循环的i代表的是value（多用于数组），for...in循环的是key（多用于对象）
+4. bootstrap用了哪些，jQuery用了哪些，css选择器有哪几种，有哪些优先级，+  > 分别表示什么，子代/后代
+5. vue中的计算属性computed、watch有什么区别，分别应用于什么场景
+6. vue的生命周期，用过的有哪些，怎么用的描述一下；一般在mounted里面用什么
+7. v-show和v-if的区别，在项目中是怎么使用的
+8. Photoshop的使用，学校竞赛的情况，写的项目详细描述一下，用的vue的什么版本
+9. 项目中轮播图、列表、联动、递归展示使用，后台数据怎么模拟，获取的地址是怎么写的，面试官会详细听，问到代码，甚至会给出一定的意见（v-for改为数组管理），项目的难点在哪里
+10. 项目中用到v-for，其中的key值作用，使用效率如何，没有用key会怎么样
+11. vue中父子组件传值，用vuex组件传值的时候，代码是怎么写的
+12. 学习的方法有哪些，《js高级程序设计》中函数重载了解吗
+
+
+
+
+
+### 宇视笔试题
+
+1. 在js的浏览器对象模型中，window对象的（）属性是用来指定浏览器状态栏里面的临时消息
+
+2. 两个div采用绝对定位，要设置层级关系，需要设置哪个属性
+
+3. eval()函数可以解释由js源代码组成的字符串吗？该函数能用调试工具进行断点调试吗？该函数是js自带的函数，会不会引起安全性问题？该函数动态解释字符串，会存在效率问题吗？
+
+4. 一般html网页元素加载完成后，会触发哪个事件？onready onchange onload onblur
+
+5. addEventListener可以多次给DOM对象增加监听事件吗？
+
+6. attachEvent可以删除DOM对象的监听事件吗
+
+7. 通过new Date（）可以获取当前PC本地时间吗？
+
+8. form标签对之间，可以出现p、ul等非表单域元素吗
+
+9. 在js中，两个证书进行除（/）运算，结果也为整数吗？
+
+10. 属性document.body.scrolWidth表示网页中滚动条的宽度吗？
+
+11. HTTP常见的状态码
+
+12. js或DOM操作方便，浏览器兼容的注意项有哪些
+
+13. Web前端开发常见的安全漏洞
+
+14. 冒泡排序
+
+15. 深拷贝代码
+
+    
+
+### 宇视笔试后的电话面试
+
+1. vue生命周期有哪些
+2. v-if和v-show有什么区别
+3. vuex了解吗
+4. 单页面应用的优缺点
+5. 轮播图的实现及后台数据抓取
+6. 跨域
+7. 安全性，在无法使用HTTPS的情况下，局域网如何实现防止报文攻击
