--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -2002,3 +2002,25 @@ console.log(origin);
 5. 轮播图的实现及后台数据抓取
 6. 跨域
 7. 安全性，在无法使用HTTPS的情况下，局域网如何实现防止报文攻击
+
+### B站站友分享的题目
+
+1. 学校里的情况简介，对前端的理解，学习前端的途径，后端语言的了解成都
+
+2. 列举常用浏览器以及说明其内核
+
+3. http和https分别是什么，有什么区别
+
+4. cookie和session的作用与区别
+
+5. 前端性能优化的方法，举例说明
+
+6. 从输入URL到页面加载完成，发生了什么
+
+7. 可以通过什么途径查看一个网站所使用的技术
+
+8. react的核心是什么
+
+9. vue router有哪些钩子函数，介绍，哪一个是可以在全局使用的
+
+   
