--- a/_posts/2019-08-03-工作遇到的问题小结.md
+++ b/_posts/2019-08-03-工作遇到的问题小结.md
@@ -17,7 +17,7 @@ typora-root-url: ..
 
 2. async作为一个关键词放在函数前面，表示异步执行，该函数的执行不阻塞后面代码的执行；await表示等待await后面的函数执行完毕，并且有了返回结果之后，才能继续执行下面的代码
 
-3. 经验3.在调用接口的时候，注意传参和接收参数的形式要一致
+3. 在调用接口的时候，注意传参和接收参数的形式要一致
 
 ```javascript
 //这是声明调用接口的方法，传递的参数是params，参数的形式是键值对形式
@@ -83,6 +83,8 @@ export const getInfo = (params) => {
      }    
  },
 ```
+
+
 
 4. 在接口调用参数的时候，一般以键值对的形式调用，可以在`F12`的`Network`里面，点击`XHR`查询参数传递了什么，根据传递的参数判断是否传递了正确参数。
 
