--- a/_posts/2019-07-31-微信小程序的学习.md
+++ b/_posts/2019-07-31-微信小程序的学习.md
@@ -365,5 +365,200 @@ page {
   },
 ```
 
+6. 轮播图组件
 
+先在`index.js`的`data`中定义`swiperList:[]`，然后在`data`同层级定义调用接口获取`swiperList`的方法，然后将这个方法调用在`onload`生命周期函数中。方法和数据准备好之后，在`index.wxml`中添加结构。添加好结构之后去`index.wxss`添加样式。
+
+```javascript
+/*这是定义在index.js中的方法名称*/
+getSwiperList() {
+     let that=this;
+     wx.request({
+       url: "https://easy-mock.com/mock/5c1dfd98e8bfa547414a5278/bili/swiperList",
+       success(res) {
+         if(res.data.code===0){
+           that.setData({
+             swiperList:res.data.data.swiperList
+           })
+         }
+       }
+     })
+  },
+```
+
+```javascript
+/*这是添加在index.wxml中的轮播图的结构*/
+  <view class="slides">
+      /*autoplay指的自动播放；indicator-dots指的浮动小圆点；circular指的轮播图自动循环播放*/
+    	<swiper autoplay indicator-dots circular>
+      			<swiper-item wx:for="{{swiperList}}" wx:key="{{index}}">
+        				<navigator>
+          						<image mode="widthFix" src="{{item.imgSrc}}"></image>
+        				</navigator>
+      			</swiper-item>
+    	</swiper>
+  </view>
+```
+
+```css
+/* 轮播图 */
+.slides {
+    padding: 10rpx;
+}
+.slides swiper {
+    height: 220rpx;
+}
+.slides navigator {
+    width: 100%;
+    height: 100%;
+}
+.slides image {
+    width: 100%;
+    height: 100%;
+}
+```
+
+7. 视频列表
+
+先在`index.js`的`data`中定义`videosList:[]`，然后在`data`同层级定义调用接口获取`videosList`的方法，然后将这个方法调用在`onload`生命周期函数中。方法和数据准备好之后，在`index.wxml`中添加结构。添加好结构之后去`index.wxss`添加样式。
+
+```javascript
+/*这是定义在index.js中的方法名称*/
+getVideosList() {
+     let that=this;
+     wx.request({
+       url: "https://easy-mock.com/mock/5c1dfd98e8bfa547414a5278/bili/videosList",
+       success(res) {
+         if(res.data.code===0){
+           that.setData({
+             swiperList:res.data.data.videosList
+           })
+         }
+       }
+     })
+  },
+```
+
+```javascript
+/*这是添加在index.wxml中的视频列表的结构*/
+<view class="video_wrap">
+    	<navigator class="video_item" wx:for="{{videosList}}" wx:key="{{index}}">
+      			<!-- 图片容器 -->
+      			<view class="video_image">
+        				<image mode="widthFix" src="{{item.imgSrc}}" ></image>
+        				<view class="video_info">
+            					<!-- 播放量 -->
+            					<view class="play_count">{{item.playCount}}</view>
+            					<!-- 评论量 -->
+            					<view class="comment_count">{{item.commentCount}}</view>
+        				</view>
+     		 	</view>
+     			<!-- 标题 -->
+      			<view class="video_title">{{item.desc}}</view>
+    	</navigator>
+  </view>
+```
+
+```css
+/*在index.wxss中添加样式*/
+.video_wrap {
+    display: flex;
+    flex-wrap:wrap;
+    padding: 5rpx;
+    justify-content: space-between;
+}
+.video_item {
+    width: 48%;
+    margin-bottom: 20rpx;
+}
+.video_image{
+    position: relative;
+}
+.video_image image{
+    width: 100%;
+    border-radius: 15rpx;
+}
+.video_image .video_info{
+    position: absolute;
+    left: 0;
+    bottom: 10rpx;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    color: #fff;
+    font-size: 24rpx;
+}
+.video_title{
+    font-size: 28rpx;
+/*这里可以注意一下，这是显示两行文字，超出的显示省略号的固定写法*/
+    display: -webkit-box;
+    overflow: hidden;
+    white-space: normal;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+```
+
+
+
+8. 添加`font`资源
+
+在阿里巴巴字体库中下载好要的文件，然后留`iconfont.ttf`和`iconfont.css`以及网页链接备用，先将`iconfont.ttf`在网站`https://transfonter.org`中勾选`Base64 encode`后进行转换，得到`stylesheet.css`，然后将`stylesheet.css`和之前备用的`iconfont.css`中的内容，复制到`app.wxss`中，在调用的时候使用网页链接中的`Font-class`。
+
+![1565012353633](/img/assets_2019/1565012353633.png)
+
+将`iconfont.ttf`转换成`stylesheet.css`
+
+![1565012414400](/img/assets_2019/1565012414400.png)
+
+![1565012462174](/img/assets_2019/1565012462174.png)
+
+然后复制内容至`app.wxss`
+
+![1565012565108](/img/assets_2019/1565012565108.png)
+
+然后打开网页链接查看要调用的名称
+
+![1565012607410](/img/assets_2019/1565012607410.png)
+
+最后，调用
+
+```javascript
+<text class="iconfont icon-liulan"></text>
+<text class="iconfont icon-bofang"></text>
+```
+
+效果如图
+
+![1565012668098](/img/assets_2019/1565012668098.png)
+
+9. 添加视频播放的详情页面，先利用`app.json`进行快速的文件增加
+
+```json
+/*第二行是新增文件的写法*/
+{  "pages": [
+    "pages/index/index",
+    "pages/detail/detail"
+  ],
+```
+
+然后去首页添加跳转链接，在`navigator`中添加
+
+```javascript
+<navigator url="../detail/detail?id={{item.id}}"...
+```
+
+然后在`detail`文件夹中修改`detail.json`文件
+
+```json
+/*navigationBarTitleText 子页的顶部标题*/
+{
+    "usingComponents": {
+      "myTitle":"../../components/myTitle/myTitle"
+    },
+    "navigationBarTitleText": "视频详情"
+}
+```
 
