第二周-修改
第二周-修改

--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -2026,3 +2026,13 @@ console.log(origin);
 9. vue router有哪些钩子函数，介绍，哪一个是可以在全局使用的
 
    
+
+### 小伙伴分享的面试题
+
+1. 为什么选择`vue+element`这样一个体系搭建系统？有什么吗优点？
+2. 在实习的项目中，你学到了什么？你认为现在的项目有什么可以优化的地方？
+3. 公司要求写代码，用js原生仿照发布者订阅者模式写。
+4. 写一个左侧导航栏，不能调试，鼠标移动底部变色，参照京东左侧导航栏
+
+ 
+
