--- a/_posts/2019-07-31-微信小程序的学习.md
+++ b/_posts/2019-07-31-微信小程序的学习.md
@@ -663,4 +663,12 @@ getVideoContent(videoId) {
 }
 ```
 
-13.接下来写视频详情页下方的视频推荐列表
+13.总结几个详情页撰写的步骤
+
+①先在detail.js中进行方法的定义，在onload钩子函数中调用，测试接口并返回数据；
+
+②若成功，则在data中定义变量othersList，并将方法中获取到的res内容进行数组的赋值；
+
+③然后在detail.wxml中写一下标签结构，保证所有内容都能够显示；
+
+④最后对样式进行修改。
