--- a/_posts/2019-08-03-工作遇到的问题小结.md
+++ b/_posts/2019-08-03-工作遇到的问题小结.md
@@ -233,8 +233,8 @@ checkGroupNode: function (a, b) {
 // 这里是为了实现多级级联多选时候，选中的节点，只取最后一项内容保存在school中
 handleChange(value) {      
     for (let item of value) {       
-        this.school.push(item[item.length - 1]);             
-    }    
+        this.three.push(item[item.length - 1]);             
+    }  
 }
 ```
 
@@ -278,16 +278,16 @@ creatQrCode() { // 创建一个实例对象
 
 ### 6. `element ui`中`el-table`
 
-在`el-table`中，`scope.row`表示的是**一行的数据**，如果我想要输出一个数组中的每一个对象的值，如下，可以**直接使用`{{scope.row.title}}`插槽**即可。
+在`el-table`中，`scope.row`表示的是**一行的数据**，如果我想要输出一个数组中的每一个对象的值，如下，可以直接使用`{{scope.row.title}}`插槽即可。
 
 ```json
 "items":[
     {
         "id":"2000001",
         "school":"浙江大学",
-        "title"："前端开发",
+        "title":"前端开发",
         "contnt":"HTML+CSS+JavaScript",
-        "detail":"计算机基础"，
+        "detail":"计算机基础",
         "adress":"VScode",
         "likes":0,
         "views":45,
@@ -301,9 +301,9 @@ creatQrCode() { // 创建一个实例对象
         		"views":4,
         		"child":0,
         		"friends":9
-    		},{},{},...
+    		},{},{}
         ]
-    },{},...
+    },{}
 ]
 ```
 
@@ -312,7 +312,7 @@ creatQrCode() { // 创建一个实例对象
 ```html
 <el-table-column prop="schoolsNames" label="学校"  show-overflow-tooltip > 
     <template scope="scope">  
-        <span v-for="schoolsName in scope.row.schoolsNames" :key="schoolsName.id"> 				<span>{{ schoolsName.name }}</span >  
+        <span v-for="schoolsName in scope.row.schoolsNames" :key="schoolsName.id"> 								<span>{{ schoolsName.name }}</span >  
 		</span>  
 	</template> 
 </el-table-column>
