--- a/_posts/2019-07-31-微信小程序的学习.md
+++ b/_posts/2019-07-31-微信小程序的学习.md
@@ -1,15 +1,4 @@
----
-layout:     post
-title:      微信小程序的学习
-subtitle:  
-date:       2019-07-31
-author:     
-header-img: 
-catalog: true
-tags:
-    - < 微信小程序的学习 >
-typora-root-url: ..
----
+   - 
 
 # 微信小程序的学习（基础视频）
 
@@ -672,3 +661,80 @@ getVideoContent(videoId) {
 ③然后在detail.wxml中写一下标签结构，保证所有内容都能够显示；
 
 ④最后对样式进行修改。
+
+#### 14.自己写小程序
+
+```html
+ <view class="findlost_wrap">
+    <navigator class="findlost" target="" url="" hover-class="navigator-hover" open-type="navigate">
+      <view class="find {{currenttab==='0'? 'tab_item_active':'tab_item'}}" data-tabId="0" bindtap="selectTab" >失物招领</view>
+      <view class="lost {{currenttab==='1'? 'tab_item_active':'tab_item'}}" data-tabId="1" bindtap="selectTab" >寻物启事</view>
+    </navigator>
+  </view>
+```
+
+```js
+// 切换失物招领/寻物启事
+  selectTab(e){
+    console.log(e);
+  },
+```
+
+输出的是
+
+![1565788467936](C:\GitHub\CodingWithAlice.github.io\img\assets_2019\1565788467936.png)
+
+#### 15.把时间戳转换为“年-月-日”
+
+先在utils文件夹中的util.js 中添加方法timeFormatTime，并输出
+
+```javascript
+/** 
+ * 时间戳转化为年 月 日 
+ *
+ * @param {*} timestamp ts: 传入时间戳
+ * @param {*} format 返回格式，支持自定义，但参数必须与formateArr里保持一致
+ */
+function timeFormatTime(timestamp,format){
+  const formateArr = ['Y', 'M', 'D', 'h', 'm', 's'];
+  let returnArr = [];
+
+  let date = new Date(timestamp);
+  let year = date.getFullYear()
+  let month = date.getMonth() + 1
+  let day = date.getDate()
+  returnArr.push(year, month, day);
+
+  returnArr = returnArr.map(formatNumber);
+
+  for (var i in returnArr) {
+      format = format.replace(formateArr[i], returnArr[i]);
+  }
+  return format;
+}
+/* 输出 */
+module.exports = {
+  timeFormatTime:timeFormatTime
+}
+```
+
+然后在要使用的页面中，打开index.js 进行变量声明
+
+
+
+```javascript
+data:{
+    createTime:''
+}
+```
+
+然后再引入 组件，保存时间戳转换过来的值
+
+```javascript
+let ss = 1530100597000;
+var time = require('../../utils/util.js');
+that.setData({
+     createTime:time.timeFormatTime(ss, 'Y/M/D')
+})
+```
+
