--- a/_posts/2019-07-31-微信小程序的学习.md
+++ b/_posts/2019-07-31-微信小程序的学习.md
@@ -1,4 +1,16 @@
-   - 
+---
+layout:     post
+title:      微信小程序的学习
+subtitle:  
+date:       2019-08-03
+author:     
+header-img: 
+catalog: true
+tags:
+    - 微信小程序
+typora-root-url: ..
+---
+
 
 # 微信小程序的学习（基础视频）
 
@@ -480,7 +492,7 @@ getVideosList() {
 
 
 
-#### 8. 添加`font`资源
+#### 8. 添加`font`字体图标资源
 
 在阿里巴巴字体库中下载好要的文件，然后留`iconfont.ttf`和`iconfont.css`以及网页链接备用，先将`iconfont.ttf`在网站`https://transfonter.org`中勾选`Base64 encode`后进行转换，得到`stylesheet.css`，然后将`stylesheet.css`和之前备用的`iconfont.css`中的内容，复制到`app.wxss`中，在调用的时候使用网页链接中的`Font-class`。
 
@@ -498,7 +510,7 @@ getVideosList() {
 
 然后打开网页链接查看要调用的名称
 
-![1565012607410](/img/assets_2019/1565012607410.png)
+![](C:\GitHub\CodingWithAlice.github.io\img\assets_2019\1565012607410.png)
 
 最后，调用
 
@@ -652,7 +664,7 @@ getVideoContent(videoId) {
 }
 ```
 
-13.总结几个详情页撰写的步骤
+#### 13.总结几个详情页撰写的步骤
 
 ①先在detail.js中进行方法的定义，在onload钩子函数中调用，测试接口并返回数据；
 
